fix unused imports and minor warnings (#1578)